<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itsjustdrinks.itsjustdrinks.ui.LoginActivity$LoginFragment">

    <TextView
        android:id="@+id/loginHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/loginIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@id/loginHeader"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/loginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginIcon"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/app_description"/>

    <Button
        android:id="@+id/loginGoogle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginDescription"
        android:layout_centerHorizontal="true"
        android:text="@string/login_google"
        android:drawableEnd="@mipmap/ic_google"/>

    <Button
        android:id="@+id/loginFacebook"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginGoogle"
        android:layout_centerHorizontal="true"
        android:text="@string/login_facebook"
        android:drawableEnd="@mipmap/ic_facebook" />

    <Button
        android:id="@+id/loginTwitter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginFacebook"
        android:layout_centerHorizontal="true"
        android:text="@string/login_twitter"
        android:drawableEnd="@mipmap/ic_twitter"/>

</RelativeLayout>
